--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name":        "registwin",
-  "version":     "0.1.0",
-  "main":        "./lib/index.js",
+  "name": "registwin",
+  "version": "0.1.1",
+  "main": "./lib/index.js",
   "description": "Access the Windows Registry by the classes from Chromium",
-  "homepage":    "http://github.com/luyuan/registwin",
-  "author":      "Lu Yuan <luyuan.china@gmail.com>",
-  "engines" : { "node" : ">=0.8.0" },
+  "homepage": "http://github.com/luyuan/registwin",
+  "author": "Lu Yuan <luyuan.china@gmail.com>",
+  "engines": {
+    "node": ">=0.8.0"
+  },
   "keywords": [
     "windows",
     "registry"
   ],
   "repository": {
     "type": "git",
-    "url":  "https://github.com/luyuan/registwin.git"
+    "url": "https://github.com/luyuan/registwin.git"
   },
   "dependencies": {
-    "nan" : "~1.3.0"
+    "nan": "~1.3.0"
   },
-  "gypfile": true
+  "gypfile": true,
+  "scripts": {
+    "install": "node-gyp rebuild"
+  },
+  "bugs": {
+    "url": "https://github.com/luyuan/registwin/issues"
+  },
+  "directories": {
+    "doc": "doc",
+    "test": "test"
+  },
+  "devDependencies": {},
+  "license": "BSD-3-Clause"
 }
